--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "intl": "^1.2.5",
     "json-server": "^0.16.1",
     "react": "16.11.0",
